--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,3 @@
-.app {
-  display: flex;
-  font-size: 18px;
-  background: url('../home-bg.png');
-}
+@import './var.scss';
+@import './common.scss';
+@import './home.scss';
